--- a/PemrogramanWeb/index.html
+++ b/PemrogramanWeb/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" type="image/png" href="https://i.pinimg.com/564x/39/85/a6/3985a6d86879b0e0e197d88ad3559a34.jpg">
     <meta name="description" content="Website Pariwisata Indonesia">
+    <meta name="author" content="Indra Dwi Aryadi">
     <meta name="keywords" content="pariwisata, indonesia, wisata, budaya">
     <script type="text/javascript">
         function googleTranslateElementInit() {
@@ -54,13 +55,13 @@
         <div id="homeCarousel" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="images/Indonesia.webp" alt="Indonesia" class="d-block w-100 img-fluid rounded shadow-sm">
+                    <img src="images/Indonesia.webp" alt="Indonesia" class="d-block w-100 img-fluid rounded shadow-sm" loading="lazy">
                 </div>
                 <div class="carousel-item">
-                    <img src="images/Indonesia2.webp" alt="Indonesia 2" class="d-block w-100 img-fluid rounded shadow-sm">
+                    <img src="images/Indonesia2.webp" alt="Indonesia 2" class="d-block w-100 img-fluid rounded shadow-sm" loading="lazy">
                 </div>
                 <div class="carousel-item">
-                    <img src="images/Indonesia3.webp" alt="Indonesia 3" class="d-block w-100 img-fluid rounded shadow-sm">
+                    <img src="images/Indonesia3.webp" alt="Indonesia 3" class="d-block w-100 img-fluid rounded shadow-sm" loading="lazy">
                 </div>
             </div>
             <a class="carousel-control-prev" href="#homeCarousel" role="button" data-slide="prev">
@@ -81,21 +82,30 @@
         <div id="cultureCarousel" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="images/tarikecak.webp" alt="Tari Kecak" class="d-block w-100 img-fluid rounded shadow-sm">
+                    <caption class="d-none d-md-block" style="text-align: justify;">
+                        Tari Kecak adalah tarian tradisional Bali yang terkenal dengan ciri khas uniknya, yaitu penggunaan suara manusia sebagai pengganti alat musik. Tarian ini mengisahkan cerita dari epik Hindu Ramayana, dengan penari yang menggambarkan pertarungan antara Rama dan Rahwana. Nama "Kecak" berasal dari suara "cak" yang dihasilkan oleh para penari yang bertepuk tangan dalam pola berulang. Tari Kecak biasanya dipentaskan di luar ruangan, sering kali di pura atau tepi pantai dengan efek api dan pencahayaan dramatis. Selain sebagai hiburan, tari ini juga memiliki fungsi sosial dan spiritual dalam masyarakat Bali, serta telah dikenal luas di seluruh dunia sebagai atraksi pariwisata utama Bali.
+                    </caption>
+                    <img src="images/tarikecak.webp" loading="lazy" alt="Tari Kecak" class="d-block w-100 img-fluid rounded shadow-sm">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>Tari Kecak</h5>
                         <p>Tarian tradisional Bali.</p>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="images/ngaben.webp" alt="Upacara Ngaben" class="d-block w-100 img-fluid rounded shadow-sm">
+                    <caption class="d-none d-md-block" style="text-align: justify;">
+                        Upacara Ngaben adalah ritual kremasi tradisional Bali yang merupakan bagian penting dari ajaran Hindu Bali. Upacara ini dilakukan untuk membebaskan roh orang yang telah meninggal dari tubuh fisiknya agar dapat mencapai kehidupan setelah mati yang lebih baik. Proses upacara melibatkan serangkaian tahapan yang kompleks, termasuk pembuatan sarcophagus berbentuk stupa atau kerbau, pemujaan kepada para dewa, serta prosesi pembakaran jenazah yang dilakukan di lokasi khusus. Ngaben tidak hanya bertujuan untuk kremasi, tetapi juga untuk memastikan bahwa roh yang telah meninggal mendapat penghormatan yang layak dan dapat mencapai moksha, atau pembebasan dari siklus reinkarnasi. Ritual ini sering kali disertai dengan musik gamelan, tarian, dan berbagai upacara keagamaan yang melibatkan banyak anggota keluarga dan komunitas. Upacara Ngaben merupakan manifestasi dari kepercayaan Hindu Bali tentang kehidupan, kematian, dan kehidupan setelah mati.
+                    </caption>
+                    <img src="images/ngaben.webp" loading="lazy" alt="Upacara Ngaben" class="d-block w-100 img-fluid rounded shadow-sm">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>Upacara Ngaben</h5>
                         <p>Upacara kremasi Bali.</p>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="images/grebeg.webp" alt="Tradisi Grebeg" class="d-block w-100 img-fluid rounded shadow-sm">
+                    <caption class="d-none d-md-block" style="text-align: justify;">
+                        Tradisi Grebeg di Yogyakarta adalah upacara tradisional yang merayakan hari-hari besar dalam kalender Islam seperti Idul Fitri, Idul Adha, dan Maulid Nabi Muhammad, sebagai bentuk penghormatan kepada Tuhan, Sultan, dan leluhur. Terdapat beberapa jenis Grebeg, seperti Grebeg Syawal, Grebeg Besar, dan Grebeg Maulud, masing-masing dengan ritual berbeda. Ritual utama melibatkan arak-arakan gunungan, yaitu tumpukan makanan yang dihias dan dibawa oleh peserta upacara, kemudian dibagikan kepada masyarakat sebagai simbol berkah dan keberuntungan. Upacara ini dipimpin oleh Sultan Yogyakarta dan melibatkan keluarga kerajaan serta masyarakat umum. Tradisi Grebeg menggambarkan perpaduan antara budaya Jawa dan ajaran Islam, mencerminkan harmonisasi adat istiadat lokal dan praktik keagamaan, serta menjadi kesempatan bagi masyarakat untuk berkumpul, berdoa, dan merayakan kebersamaan.
+                    </caption>
+                    <img src="images/grebeg.webp" loading="lazy" alt="Tradisi Grebeg" class="d-block w-100 img-fluid rounded shadow-sm">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>Tradisi Grebeg</h5>
                         <p>Upacara tradisional di Yogyakarta.</p>
@@ -119,21 +129,69 @@
         <div id="tourismCarousel" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="images/bali.webp" alt="Bali" class="d-block w-100 img-fluid rounded shadow-sm">
+                    <caption>
+                        Bali adalah salah satu destinasi wisata paling populer di Indonesia, dikenal dengan pantai-pantainya yang indah, budaya yang kaya, dan keramahan penduduk lokal. Bali menawarkan berbagai atraksi, mulai dari keindahan alam seperti Gunung Agung dan Danau Batur, hingga pengalaman budaya seperti upacara keagamaan dan tarian tradisional.
+                        <br />
+                        Fakta Unik menarik:
+                        <ul>
+                            <li>Bali memiliki lebih dari 20,000 pura, yang dikenal sebagai "Pulau Seribu Pura."</li>
+                            <li>Tari Kecak, salah satu tarian tradisional Bali, terkenal dengan pertunjukan dramatis yang menggambarkan kisah epik Ramayana.</li>
+                            <li>Bali adalah rumah bagi "Desa Penglipuran," yang dikenal sebagai salah satu desa terbersih di dunia.</li>
+                        </ul>
+                        Informasi Penting
+                        <ol start="1">
+                            <li>Bali memiliki banyak pantai terkenal seperti Kuta, Seminyak, dan Uluwatu, yang menarik pengunjung dari seluruh dunia untuk berselancar, snorkeling, dan berjemur.</li>
+                            <li>Bandara Internasional Ngurah Rai di Denpasar adalah gerbang utama masuk ke Bali, dengan penerbangan langsung dari berbagai negara.</li>
+                            <li>Ubud, yang terletak di tengah-tengah pulau, adalah pusat budaya dan seni Bali, terkenal dengan galeri seni, pertunjukan tari, dan sawah terasering.</li>
+                        </ol>
+                    </caption>
+                    <img src="images/bali.webp" loading="lazy" alt="Bali" class="d-block w-100 img-fluid rounded shadow-sm">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>Bali</h5>
                         <p>Pantai yang indah dan budaya yang hidup.</p>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="images/yogyakarta.webp" alt="Yogyakarta" class="d-block w-100 img-fluid rounded shadow-sm">
+                    <caption>
+                        Yogyakarta, sering disebut Jogja, adalah kota di pulau Jawa yang terkenal dengan warisan budayanya yang kaya dan sejarah panjangnya sebagai pusat kesultanan. Yogyakarta adalah pusat seni dan pendidikan, serta gerbang menuju beberapa situs sejarah terpenting di Indonesia, seperti Candi Borobudur dan Prambanan.
+                        <br />
+                        Fakta Unik menarik:
+                        <ul>
+                            <li>Yogyakarta adalah satu-satunya provinsi di Indonesia yang masih dipimpin oleh seorang Sultan, Sultan Hamengkubuwono X.</li>
+                            <li>Malioboro adalah jalan terkenal di Yogyakarta, dikenal dengan pasar malamnya, pusat perbelanjaan, dan kuliner lokal yang lezat.</li>
+                            <li>Yogyakarta adalah pusat batik, dengan banyak pengrajin batik yang menghasilkan desain batik tulis tradisional.</li>
+                        </ul>
+                        Informasi Penting
+                        <ol start="1">
+                            <li>Candi Borobudur, sekitar 40 km dari Yogyakarta, adalah candi Buddha terbesar di dunia dan salah satu Situs Warisan Dunia UNESCO.</li>
+                            <li>Kraton Yogyakarta, istana resmi Sultan, adalah pusat budaya yang masih berfungsi sebagai tempat tinggal keluarga kerajaan dan situs wisata.</li>
+                            <li>Jalan Malioboro adalah destinasi populer bagi wisatawan yang ingin berbelanja suvenir dan menikmati makanan jalanan khas Yogyakarta.</li>
+                        </ol>
+                    </caption>
+                    <img src="images/yogyakarta.webp" loading="lazy" alt="Yogyakarta" class="d-block w-100 img-fluid rounded shadow-sm">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>Yogyakarta</h5>
                         <p>Warisan budaya dan situs sejarahnya.</p>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="images/rajaampat.webp" alt="Raja Ampat" class="d-block w-100 img-fluid rounded shadow-sm">
+                    <caption>
+                        Raja Ampat adalah kepulauan di Papua Barat yang terkenal dengan keindahan bawah lautnya yang luar biasa. Raja Ampat adalah surga bagi penyelam dan pecinta alam, menawarkan terumbu karang yang kaya, kehidupan laut yang beragam, dan pemandangan alam yang memukau.
+                        <br />
+                        Fakta Unik menarik:
+                        <ul>
+                            <li>Raja Ampat terdiri dari lebih dari 1,500 pulau kecil, dengan empat pulau utama yaitu Waigeo, Misool, Salawati, dan Batanta.</li>
+                            <li>Kepulauan ini memiliki salah satu keanekaragaman hayati laut tertinggi di dunia, dengan lebih dari 1,400 spesies ikan dan 550 jenis karang.</li>
+                            <li>Puncak Wayag adalah salah satu titik pandang terbaik di Raja Ampat, menawarkan pemandangan panoramik yang spektakuler dari formasi karst dan perairan biru.</li>
+                        </ul>
+                        Informasi Penting
+                        <ol start="1">
+                            <li>Sorong adalah pintu gerbang utama menuju Raja Ampat, dengan penerbangan dari berbagai kota besar di Indonesia.</li>
+                            <li>Waktu terbaik untuk mengunjungi Raja Ampat adalah antara Oktober dan April, ketika kondisi laut paling tenang dan visibilitas terbaik untuk menyelam.</li>
+                            <li>Karena lokasinya yang terpencil, akses ke fasilitas medis dan layanan umum mungkin terbatas, sehingga wisatawan disarankan untuk mempersiapkan segala kebutuhan sebelumnya.</li>
+                        </ol>
+                    </caption>
+                    <img src="images/rajaampat.webp" loading="lazy" alt="Raja Ampat" class="d-block w-100 img-fluid rounded shadow-sm">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>Raja Ampat</h5>
                         <p>Surga bagi penyelam dan pecinta alam.</p>
@@ -158,21 +216,39 @@
         <div id="hotelsCarousel" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="images/hotelbaliparadise.webp" alt="Hotel Bali Paradise" class="d-block w-100 img-fluid rounded shadow-sm">
+                    <ul>
+                        <li>Fasilitas: kolam renang, spa, dan Wi-Fi gratis</li>
+                        <li>Harga: Rp. 556.580 ($34) per malam hingga Rp. 3.000.000 ($183,26)</li>
+                        <li>Alamat: Jl. Kartika, Kalibukbuk 81151 Lovina, Bali</li>
+                        <li>Informasi Penting: Terletak di lokasi strategis dengan pemandangan pantai yang menakjubkan</li>
+                    </ul>
+                    <img src="images/hotelbaliparadise.webp" loading="lazy" alt="Hotel Bali Paradise" class="d-block w-100 img-fluid rounded shadow-sm">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>Hotel Bali Paradise</h5>
                         <p>Fasilitas termasuk kolam renang, spa, dan Wi-Fi gratis. Rp. 556.580 ($34) per malam hingga Rp. 3.000.000 ($183,26)</p>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="images/royalambarrukmojogja.webp" alt="Hotel Royal Ambarrukmo Jogja" class="d-block w-100 img-fluid rounded shadow-sm">
+                    <ul>
+                        <li>Fasilitas: gym, restoran, dan sarapan gratis</li>
+                        <li>Harga: Rp. 2.000.000 ($122,17) per malam hingga Rp. 10.000.000 ($610,87)</li>
+                        <li>Alamat: Jl. Laksda Adisucipto No. 81 55281 Yogyakarta ·</li>
+                        <li>Informasi Penting: Dekat dengan pusat keramaian dan tempat wisata terkenal</li>
+                    </ul>
+                    <img src="images/royalambarrukmojogja.webp" loading="lazy" alt="Hotel Royal Ambarrukmo Jogja" class="d-block w-100 img-fluid rounded shadow-sm">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>Hotel Royal Ambarrukmo Jogja</h5>
                         <p>Fasilitas termasuk gym, restoran, dan sarapan gratis. Harga dimulai Rp. 2.000.000 ($122,17) per malam hingga Rp. 10.000.000 ($610,87)</p>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="images/yenatarresort.webp" alt="Yenatar Resort" class="d-block w-100 img-fluid rounded shadow-sm">
+                    <ul>
+                        <li>Fasilitas: tur menyelam, kamar tepi pantai, dan bar</li>
+                        <li>Harga: Rp. 4.763.670 ($291) per malam</li>
+                        <li>Alamat: Pulau Gam, berseberangan dengan Pulau Kri dan Pulau Manswar</li>
+                        <li>Informasi Penting: Terletak di tepi pantai dengan pemandangan laut yang memukau</li>
+                    </ul>
+                    <img src="images/yenatarresort.webp" loading="lazy" alt="Yenatar Resort" class="d-block w-100 img-fluid rounded shadow-sm">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>Resor Yenatar</h5>
                         <p>Fasilitas termasuk tur menyelam, kamar tepi pantai, dan bar. harga dimulai Rp. 4.763.670 ($291) per malam</p>
@@ -189,7 +265,7 @@
             </a>
         </div>
     </section>
-    
+        
     <section id="pesan" class="container my-5 animate__animated animate__fadeIn">
         <h2>Pesan</h2>
         <form id="contactForm" autocomplete="on">
