--- a/myportfolio/index.html
+++ b/myportfolio/index.html
@@ -60,7 +60,7 @@
             </nav>
         </header>
 
-        <section id="home" class="hero" data-aos="fade-down">
+        <section id="home" class="hero" data-aos="fade-up">
             <div class="container hero-content">
                 <img data-src="./images/person.png" alt="Indra Dwi A." style="width: 200px; height: 200px; border-radius: 50%; margin: 0 auto; display: block;">
                 <h1>Indra Dwi A.</h1>
@@ -72,7 +72,7 @@
             </div>
         </section>
 
-        <section id="skills" class="skills" data-aos="slide-left">
+        <section id="skills" class="skills" data-aos="fade-up">
             <div class="container">
                 <h2 class="section-title">Skills & Expertise</h2>
                 <div class="skills-grid">
