--- a/myportfolio/index.html
+++ b/myportfolio/index.html
@@ -13,6 +13,7 @@
     <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap">
     <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="canonical" href="https://xnuvers007.github.io/myportfolio/" />
 
     <!-- HTML Meta Tags -->
     <meta name="description" content="This is website portofolio by Xnuvers007 from Indonesia">
@@ -411,16 +412,16 @@
                 <div class="contact-content">
                     <p>I'm always interested in hearing about new projects and opportunities. Feel free to reach out!</p>
                     <div class="social-links">
-                        <a href="https://github.com/Xnuvers007" class="social-link" target="_blank">
+                        <a href="https://github.com/Xnuvers007" class="social-link" target="_blank" aria-label="Visit my Github profile">
                             <i class="fab fa-github"></i>
                         </a>
-                        <a href="https://www.facebook.com/indradwi.25/" class="social-link" target="_blank">
+                        <a href="https://www.facebook.com/indradwi.25/" class="social-link" target="_blank" aria-label="Visit my Facebook profile">
                             <i class="fab fa-facebook"></i>
                         </a>
-                        <a href="https://instagram.com/Indradwi.25" class="social-link" target="_blank">
+                        <a href="https://instagram.com/Indradwi.25" class="social-link" target="_blank" aria-label="Visit my Instagram profile">
                             <i class="fab fa-instagram"></i>
                         </a>
-                        <a href="#contact-form" class="social-link">
+                        <a href="#contact-form" class="social-link" aria-label="Go to contact form">
                             <i class="fas fa-envelope"></i>
                         </a>
                     </div>
