--- a/myportfolio/index.html
+++ b/myportfolio/index.html
@@ -192,7 +192,7 @@
 
                     <div class="project-card">
                         <img data-src="https://user-images.githubusercontent.com/62522733/131252692-16065250-5607-43a0-a606-db6162211986.png" alt="OSINT Project" class="project-image">
-                        <div class="project-content" data-aos="fade"
+                        <div class="project-content" data-aos="fade">
                             <h3 class="project-title">OSINT</h3>
                             <p class="project-description">OSINT is a tool to find information on the internet or social media. </p>
                             <div class="project-tags">
@@ -209,7 +209,7 @@
                     </div>
                     <div class="project-card">
                         <img data-src="./images/facerecog.png" alt="Face Recognition Project" class="project-image">
-                        <div class="project-content" data-aos="fade"
+                        <div class="project-content" data-aos="fade">
                             <h3 class="project-title">Face Recognition Attendance</h3>
                             <p class="project-description">Face Recognition Attendance is a tool to make attendance easier. for example, in schools or companies. </p>
                             <div class="project-tags">
@@ -226,7 +226,7 @@
                     </div>
                     <div class="project-card">
                         <img data-src="./images/pamstudents.png" alt="Pamstudents Project" class="project-image">
-                        <div class="project-content" data-aos="fade"
+                        <div class="project-content" data-aos="fade">
                             <h3 class="project-title">Pamstudents</h3>
                             <p class="project-description">Welcome to PamStudents – your premier companion for accessing Pamulang University campus websites. This application is crafted to streamline your educational journey by providing swift and efficient access to essential resources for students and faculty of Pamulang University.</p>
                             <div class="project-tags">
@@ -244,7 +244,7 @@
                     </div>
                     <div class="project-card">
                         <img data-src="https://i.pinimg.com/564x/90/44/a6/9044a634e09b2a633ff73efad0fdf470.jpg" alt="Metagen Project" class="project-image">
-                        <div class="project-content" data-aos="fade"
+                        <div class="project-content" data-aos="fade">
                             <h3 class="project-title">Metagen (Meta Generator)</h3>
                             <p class="project-description">Metagen is a tool to generate meta tags for your website and making it easier to share on social media platforms. Metagen can be used for SEO purposes. </p>
                             <div class="project-tags">
