--- a/jadwalkuliah/index.html
+++ b/jadwalkuliah/index.html
@@ -140,8 +140,7 @@
     
     <div class="footer">
         <div class="container">
-            <p>&copy; 2025 Universitas Pamulang. All rights reserved.</p>
-            <p>Dikembangkan oleh Tim IT UNPAM</p>
+            <p>&copy; 2025 Xnuvers007. All rights reserved.</p>
         </div>
     </div>
 
