--- a/ramadhan/index.html
+++ b/ramadhan/index.html
@@ -238,17 +238,17 @@
                 <div class="dua-translation">"Sampaikanlah dariku walau satu ayat"</div>
                 <div class="social-share">
                     <!-- Tombol Share ke WhatsApp -->
-                    <a href="https://wa.me/?text=https://example.com" class="social-button" title="Share on WhatsApp" target="_blank" rel="noopener">
+                    <a href="https://wa.me/?text=https://xnuvers007.github.io/ramadhan/" class="social-button" title="Share on WhatsApp" target="_blank" rel="noopener">
                         <i class="fab fa-whatsapp"></i>
                     </a>
                 
                     <!-- Tombol Share ke Facebook -->
-                    <a href="https://www.facebook.com/sharer/sharer.php?u=https://example.com" class="social-button" title="Share on Facebook" target="_blank" rel="noopener">
+                    <a href="https://www.facebook.com/sharer/sharer.php?u=https://xnuvers007.github.io/ramadhan/" class="social-button" title="Share on Facebook" target="_blank" rel="noopener">
                         <i class="fab fa-facebook"></i>
                     </a>
                 
                     <!-- Tombol Share ke Twitter (X) -->
-                    <a href="https://twitter.com/intent/tweet?url=https://example.com&text=Check%20this%20out!" class="social-button" title="Share on Twitter" target="_blank" rel="noopener">
+                    <a href="https://twitter.com/intent/tweet?url=https://xnuvers007.github.io/ramadhan/&text=Check%20this%20out!" class="social-button" title="Share on Twitter" target="_blank" rel="noopener">
                         <i class="fab fa-x-twitter"></i>
                     </a>
                 </div>
