--- a/ramadhan/index.html
+++ b/ramadhan/index.html
@@ -35,7 +35,7 @@
 
     <div class="container">
         <div class="countdown">
-            <h2>Menuju Bulan Suci Ramadhan</h2>
+            <h2>Menuju Bulan Suci Hari Raya Idul Fitri <span id="year"></span></h2>
             <div class="timer">
                 <div class="timer-box">
                     <span class="number" id="days">00</span>
